kube-echo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  labels:
    app: echo
spec:
  selector:
    matchLabels:
      app: echo
  replicas: 5
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: local/echo
        imagePullPolicy: Never
        ports:
        - name: echo-service
          containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  type: NodePort
  selector:
    app: echo
  ports:
  - port: 3000
    targetPort: echo-service
